chore: added ATCG on top.

--- a/article.ru.html
+++ b/article.ru.html
@@ -154,6 +154,31 @@
     <h1>Сказание о Волшебной Пасеке</h1>
     <div class="subtitle">Басня о Коде и Мёде</div>
 
+    <div class="atcg-container">
+        <svg class="atcg-svg" viewBox="0 0 400 200">
+            <!-- Hexagon A -->
+            <g transform="translate(100, 100)">
+                <polygon id="hex-a" class="hexagon" points="50,0 25,43.3 -25,43.3 -50,0 -25,-43.3 25,-43.3"/>
+                <text id="text-a" class="hex-text" x="0" y="0">A</text>
+            </g>
+            <!-- Hexagon T -->
+            <g transform="translate(175, 56.7)">
+                <polygon id="hex-t" class="hexagon" points="50,0 25,43.3 -25,43.3 -50,0 -25,-43.3 25,-43.3"/>
+                <text id="text-t" class="hex-text" x="0" y="0">T</text>
+            </g>
+            <!-- Hexagon C -->
+            <g transform="translate(250, 100)">
+                <polygon id="hex-c" class="hexagon" points="50,0 25,43.3 -25,43.3 -50,0 -25,-43.3 25,-43.3"/>
+                <text id="text-c" class="hex-text" x="0" y="0">C</text>
+            </g>
+            <!-- Hexagon G -->
+            <g transform="translate(325, 56.7)">
+                <polygon id="hex-g" class="hexagon" points="50,0 25,43.3 -25,43.3 -50,0 -25,-43.3 25,-43.3"/>
+                <text id="text-g" class="hex-text" x="0" y="0">G</text>
+            </g>
+        </svg>
+    </div>
+    
     <div class="content-wrapper">
         <p>В некотором царстве, в некотором цифровом государстве, жила-была гильдия строителей. Но строили они не замки и мосты, а сложные, невидимые структуры из чистой логики. Это были архитекторы и разработчики программного обеспечения, и их величайшей задачей было создание систем, которые могли бы расти и адаптироваться, не рассыпаясь в хаос.</p>
         <p>Они трудились день и ночь, используя всевозможные чертежи и заклинания, но их творения часто превращались в запутанные клубки — хрупкие и трудные для изменения. Они мечтали о способе создавать программное обеспечение, которое было бы таким же устойчивым, организованным и полным жизни, как шумный пчелиный улей.</p>
