--- a/article.html
+++ b/article.html
@@ -211,6 +211,31 @@
 <body>
     <h1>The Tale of the Enchanted Apiary</h1>
     <div class="subtitle">A Fable of Code and Honey</div>
+    
+    <div class="atcg-container">
+        <svg class="atcg-svg" viewBox="0 0 400 200">
+            <!-- Hexagon A -->
+            <g transform="translate(100, 100)">
+                <polygon id="hex-a" class="hexagon" points="50,0 25,43.3 -25,43.3 -50,0 -25,-43.3 25,-43.3"/>
+                <text id="text-a" class="hex-text" x="0" y="0">A</text>
+            </g>
+            <!-- Hexagon T -->
+            <g transform="translate(175, 56.7)">
+                <polygon id="hex-t" class="hexagon" points="50,0 25,43.3 -25,43.3 -50,0 -25,-43.3 25,-43.3"/>
+                <text id="text-t" class="hex-text" x="0" y="0">T</text>
+            </g>
+            <!-- Hexagon C -->
+            <g transform="translate(250, 100)">
+                <polygon id="hex-c" class="hexagon" points="50,0 25,43.3 -25,43.3 -50,0 -25,-43.3 25,-43.3"/>
+                <text id="text-c" class="hex-text" x="0" y="0">C</text>
+            </g>
+            <!-- Hexagon G -->
+            <g transform="translate(325, 56.7)">
+                <polygon id="hex-g" class="hexagon" points="50,0 25,43.3 -25,43.3 -50,0 -25,-43.3 25,-43.3"/>
+                <text id="text-g" class="hex-text" x="0" y="0">G</text>
+            </g>
+        </svg>
+    </div>
 
     <div class="content-wrapper">
         <p>Once upon a time, in a sprawling digital kingdom, lived a guild of builders. Not of castles or bridges, but of intricate, invisible structures made of pure logic. They were software architects and developers, and their greatest challenge was to build systems that could grow and adapt without crumbling into chaos.</p>
